istio-ingress-rules/templates/grafana-vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: grafana-gateway
spec:
  selector:
    istio: ext-ingressgateway
  servers:
    - port:
        number: 3000
        name: http
        protocol: HTTP
      hosts:
        - grafana.istio.com
     tls:
       httpsRedirect: true
   - port:
       number: 443
       name: https
       protocol: HTTPS
     hosts:
       - grafana.istio.com
     tls:
       mode: PASSTHROUGH
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-vs
spec:
  hosts:
  - grafana.istio.com
  gateways:
  - grafana-gateway
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: grafana.monitoring.svc.cluster.local
        port:
          number: 3000
