istio-ingress-rules/templates/prometheus-vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: prom-gateway
spec:
  selector:
    istio: ext-ingressgateway
  servers:
    - port:
        number: 9090
        name: http
        protocol: HTTP
      hosts:
      - prom.istio.com
     tls:
       httpsRedirect: true
   - port:
       number: 443
       name: https
       protocol: HTTPS
     hosts:
      - prom.istio.com
     tls:
       mode: PASSTHROUGH
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus-vs
spec:
  hosts:
  - prom.istio.com
  gateways:
  - prom-gateway
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: prometheus-k8s.monitoring.svc.cluster.local
        port:
          number: 9090
